--- a/style.css
+++ b/style.css
@@ -23,22 +23,31 @@ body{
 	padding: 10px;
 	width: 30%;
 	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 h2 {
 	text-align: center;
   color: #fff;
 }
-
+.uls{
+	padding: 20px;
+	width: 100%;
+}
 .add {
   font-size: 22px;
 	margin-top: 10px;
   padding: 10px;
   border: none;
   border-radius: 5px;
-  width: 100%;
+  width: 92%;
   background-color: #026913;
   color: #fff;
+ 
+  
 }
 
 li {
