--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body{
+body {
   background-color: #029e48;
   display: flex;
   width: 100vw;
@@ -13,78 +13,97 @@ body{
   font-family: sans-serif;
 }
 .kanban {
-	display: flex;
-	justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
   width: 85%;
 }
 
 .column {
-	/* background-color: #f2f2f2; */
-	padding: 10px;
-	width: 30%;
-	border-radius: 5px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  /* background-color: #f2f2f2; */
+  padding: 10px;
+  width: 30%;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 h2 {
-	text-align: center;
+  text-align: center;
   color: #fff;
 }
-.uls{
-	padding: 20px;
-	width: 100%;
+.uls {
+  padding: 20px;
+  width: 100%;
 }
 .add {
   font-size: 22px;
-	margin-top: 10px;
+  margin-top: 10px;
   padding: 10px;
   border: none;
   border-radius: 5px;
   width: 92%;
   background-color: #026913;
   color: #fff;
- 
-  
 }
 
 li {
-	margin-top: 5px;
-	padding: 5px;
-	background-color: #fff;
-	border-radius: 5px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  margin-top: 5px;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li button {
-	background-color: #e74c3c;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	padding: 5px;
-	cursor: pointer;
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 li button.edit {
-	background-color: #2980b9;
+  background-color: #2980b9;
 }
 
 li button.delete {
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
 input[type="text"] {
-	width: 80%;
-	margin-right: 10px;
-	padding: 5px;
-	border-radius: 5px;
-	border: none;
+  width: 80%;
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
 }
 
 input[type="text"]:focus {
-	outline: none;
+  outline: none;
+}
+
+@media (max-width: 950px) {
+  .kanban {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .column {
+    width: 98%;
+  }
+}
+@media (max-width: 750px) {
+  .kanban {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .column {
+    width: 98%;
+  }
 }
